@@ -1,6 +1,6 @@
 Package: bayesTFR
-Version: 7.3-2.9001
-Date: 2023-06-12
+Version: 7.3-2.9002
+Date: 2023-08-04
 Title: Bayesian Fertility Projection
 Author: Hana Sevcikova (hanas@uw.edu), Leontine Alkema (alkema@nus.edu.sg), Peiran Liu (prliu@uw.edu), Adrian Raftery (raftery@uw.edu), Bailey Fosdick (bfosdick@uw.edu), Patrick Gerland (gerland@un.org)
 Maintainer: Hana Sevcikova <hanas@uw.edu>
