@@ -11,9 +11,8 @@ Generates posterior trajectories of the total fertility rate for subregions of g
 tfr.predict.subnat(countries, my.tfr.file, 
                 sim.dir = file.path(getwd(), "bayesTFR.output"), 
                 end.year = 2100, start.year = NULL, output.dir = NULL, 
-                nr.traj = NULL, seed = NULL, min.tfr = 0.5, 
-                ar.pars = c(mu = 1, rho = 0.92464, sigma = 0.04522), 
-                save.as.ascii = 0, verbose = TRUE)
+                annual = NULL, nr.traj = NULL, seed = NULL, min.tfr = 0.5, 
+                ar.pars = NULL, save.as.ascii = 0, verbose = TRUE)
 }
 
 \arguments{
@@ -23,10 +22,12 @@ tfr.predict.subnat(countries, my.tfr.file,
  \item{end.year}{End year of the projections.}
  \item{start.year}{Start year of the projections. By default, projections start at the same time point as the national projections.} 
    \item{output.dir}{Directory into which the resulting prediction objects and the trajectories are stored. See below for details.}
+\item{annual}{Logical indicating if the subnational projection should be on an annual scale or a 5-year scale. By default, 
+the scale is matched to the national simulation. If the subnational and national scales are not the same, the national trajectories are either interpolated (if \code{annual = TRUE} and the national simulation is not annual) or averaged to 5-year values (if \code{annual = FALSE} and the national simulation is annual).}
 \item{nr.traj}{Number of trajectories to be generated. If \code{NULL}, the number of trajectories in the national projections is used.}
 \item{seed}{Seed of the random number generator. If NULL no seed is set. It can be used to generate reproducible projections.}
 \item{min.tfr}{Lower bound on TFR.}
-\item{ar.pars}{List containing the parameter estimates of the AR(1) process. It must have elements called \code{mu}, \code{rho} and \code{sigma}.}
+\item{ar.pars}{Named vector containing the parameter estimates of the AR(1) process. If given, it must have elements called \code{mu}, \code{rho} and \code{sigma}. By default for a 5-year simulation, \code{c(mu = 1, rho = 0.92464, sigma = 0.04522)} is used. For an annual simulation these default parameters are scaled appropriately.}
 \item{save.as.ascii}{Either a number determining how many trajectories should be converted into an ASCII file, or \dQuote{all} in which case all trajectories are converted. By default no conversion is performed.}
 \item{verbose}{Logical switching log messages on and off.}
 }
@@ -34,7 +35,7 @@ tfr.predict.subnat(countries, my.tfr.file,
 \details{
 The function implements the methodology described in Sevcikova et al (2017). Given a set of national bayesTFR projections, it applies the Scale-AR(1) model to each national trajectory and each subregion of given countries which yield subnational TFR projections. 
 
-The file on subnational data passed in \code{my.tfr.file} has to have a column \dQuote{country_code} with numerical values corresponding to countries given in the argument \code{countries}, and column \dQuote{reg_code} giving the numerical identifier of each subregion. Column \dQuote{name} should be used for subregion name, and column \dQuote{country} for country name. An optional column  \dQuote{include_code} can be used to eliminate entries from processing. Entries with values of 1 or 2 will be included, all others will be ignored. Column \dQuote{last.observed} can be used to define which time period contains the last observed data point (given as integer, e.g. year in the middle of the time period). Remaining columns define the time periods, e.g. \dQuote{2000-2005}, \dQuote{2005-2010}. The package contains an example of such dataset, see Example below.
+The file on subnational data passed in \code{my.tfr.file} has to have a column \dQuote{country_code} with numerical values corresponding to countries given in the argument \code{countries}, and column \dQuote{reg_code} giving the numerical identifier of each subregion. Column \dQuote{name} should be used for subregion name, and column \dQuote{country} for country name. An optional column  \dQuote{include_code} can be used to eliminate entries from processing. Entries with values of 1 or 2 will be included, all others will be ignored. Column \dQuote{last.observed} can be used to define which time period contains the last observed data point (given as integer, e.g. year in the middle of the time period). Remaining columns define the time periods, e.g. \dQuote{2000-2005}, \dQuote{2005-2010} for a 5-year simulation, or \dQuote{2020}, \dQuote{2021} for an annual simulation. The package contains an example of such dataset, see Example below.
 
 Argument \code{output.dir} gives a location on disk where results of the function should be stored. If it is \code{NULL} (default),  results are stored in the same directory as the national projections. In both cases a subdirectory called \dQuote{subnat} is created in which each country has its own subfolder with the country code in its name. Each such subfolder contains the same type of outputs as in the national case generated using \code{\link{tfr.predict}}, most importantly a directory \dQuote{predictions} with trajectories for each region.
 }
@@ -43,7 +44,7 @@ A list of objects of class \code{\link{bayesTFR.prediction}}. The name of each e
 }
 
 \note{
-Even though the resulting object contains subnational results, the names  of its elements are the same as in the national case. This allows to apply the same functions on both objects (subnational and national). However, it means that sometimes the meaning of the elements or function arguments does not match the subnational context. For example, various functions expect the argument \code{country}. When a subnational object is passed to such a function, \code{country} means a subregion. 
+Even though the resulting object contains subnational results, the names  of its elements are the same as in the national case. This allows to apply the same functions on both objects (subnational and national). However, it means that sometimes the meaning of the elements or function arguments does not match the subnational context. For example, various functions expect the argument \code{country}. When a subnational object is passed to such function, \code{country} means a subregion. 
 }
 
 \references{
